[tool.poetry]
name = "edgeql-queries"
version = "0.1.0"
description = "Simple EdgeQL in Python."
authors = ["Nik Sidnev <sidnev.nick@gmail.com>"]
repository = "https://github.com/nsidnev/edgeql-queries"
documentation = "https://nsidnev.github.io/edgeql-queries/"
readme = "README.md"
license = "FreeBSD"

[tool.poetry.dependencies]
python = "^3.7"
edgedb = ">= 0.9.0"

[tool.poetry.dev-dependencies]
# common tasks
nox = "^2020.12.31"
# formatters
black = "^21.5b2"
isort = "^5.0"
autoflake = "^1.3.1"
add-trailing-comma = "^2.1.0"
# linters
wemake-python-styleguide = "^0.15.0"
# TODO: return to stable release after adding support for pyproject.toml
mypy = { git = "https://github.com/python/mypy", rev = "fdeedd6" }
flake8-pytest-style = "^1.4.0"
# tests
pytest = "^6.1.2"
pytest-cov = "^2.11.1"
pytest-asyncio = "^0.15.0"
pytest-env = "^0.6.2"
# docs
mkdocs = "^1.1.2"
mkdocs-material = "^7.1.6"
mkdocstrings = "^0.15.0"
markdown-include = "^0.6.0"
# check support for aiosql
aiosql = "^3.1.2"

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = "error"
addopts = '''
  --strict-markers
  --tb=short
  --cov=edgeql_queries
  --cov=tests
  --cov-branch
  --cov-report=term-missing
  --cov-report=html
  --cov-report=xml
  --no-cov-on-fail
  --cov-fail-under=100
'''
env = [
  "D:EDGEDB_DSN=edgedb://edgedb@localhost/edgedb"
]

[tool.coverage.report]
precision = 2
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "raise NotImplemented"
]


[tool.mypy]
disallow_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "aiosql"
ignore_missing_imports = true

[tool.isort]
profile = "black"
src_paths = ["edgeql_queries", "tests"]
combine_as_imports = true

[tool.black]
target_version = ['py38']
include = '\.pyi?$'
exclude = '''
/(\.git/
  |\.eggs
  |\.hg
  |__pycache__
  |\.cache
  |\.ipynb_checkpoints
  |\.mypy_cache
  |\.pytest_cache
  |\.tox
  |\.venv
  |node_modules
  |_build
  |buck-out
  |build
  |dist
  |media
  |infrastructure
  |templates
  |locale
)/
'''

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
