[tool.poetry]
name = "edgeql-queries"
version = "0.4.0"
description = "Simple EdgeQL in Python."
authors = ["Nik Sidnev <sidnev.nick@gmail.com>"]
repository = "https://github.com/nsidnev/edgeql-queries"
documentation = "https://nsidnev.github.io/edgeql-queries/"
readme = "README.md"
license = "FreeBSD"

[tool.poetry.dependencies]
python = "^3.7"
edgedb = ">= 0.19.0"

[tool.poetry.dev-dependencies]
# common tasks
nox = "^2022.1.7"
# formatters
black = "^22.1"
isort = "^5.10"
autoflake = "^1.3.1"
add-trailing-comma = "^2.2.1"
# linters
wemake-python-styleguide = "^0.16.0"
flake8-pytest-style = "^1.6.0"
mypy = "^0.931"
# tests
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.18.1"
pytest-env = "^0.6.2"
# docs
mkdocs = "^1.2.3"
mkdocs-material = "^8.2.3"
mkdocstrings = "^0.18.0"
markdown-include = "^0.6.0"
# check support for aiosql
aiosql = "^3.4"

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = [
  "error",

  # not sure why this warning raises here, but anyway this library doesn't use .acquire() methods manually.
  "ignore:.*Use the query methods on Pool instead.*:DeprecationWarning",
]
addopts = '''
  --strict-markers
  --tb=short
  --cov=edgeql_queries
  --cov=tests
  --cov-branch
  --cov-report=term-missing
  --cov-report=html
  --cov-report=xml
  --no-cov-on-fail
  --cov-fail-under=100
  --asyncio-mode=auto
'''

[tool.coverage.report]
precision = 2
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "raise NotImplemented",
]


[tool.mypy]
disallow_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "aiosql"
ignore_missing_imports = true

[tool.isort]
profile = "black"
src_paths = ["edgeql_queries", "tests"]
combine_as_imports = true

[tool.black]
target_version = ['py38']
include = '\.pyi?$'
exclude = '''
/(\.git/
  |\.eggs
  |\.hg
  |__pycache__
  |\.cache
  |\.ipynb_checkpoints
  |\.mypy_cache
  |\.pytest_cache
  |\.tox
  |\.venv
  |node_modules
  |_build
  |buck-out
  |build
  |dist
  |media
  |infrastructure
  |templates
  |locale
)/
'''

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
